*****************************************************************************************************
digiKam 2.6.0 - Release date: 2012-02-05

NEW FEATURES:

ImageEditor    : Template Superimpose feature have been moved to PhotoLayoutEditor kipi-plugin.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 286730 : digiKam crash when tagging faces.
002 ==> 290496 : digikam-2.5.0 core fails to build against libkipi from kde-4.7.95.
003 ==> 272980 : Crash while searching on a tag.
004 ==> 290642 : Build failed with gcc-4.7.0 [patch].
005 ==> 287772 : Build failed against boost-1.48 [patch].
006 ==> 267777 : Versioning not working properly when saving changes in the image editor.
007 ==> 290466 : MacPorts digiKam package fails to build.
008 ==> 268262 : Editor: Color: Color Effects: Vivid - black areas become reddish.
009 ==> 283491 : Caption/Tags tab: Active sub-tab not restored after restart [patch].
010 ==> 234067 : Annoying list of languages to select from when entering picture captions [patch].
011 ==> 277328 : Album Icon View Header linkable.
012 ==> 290022 : Edit and Rotate in the Light Table open or change the wrong image.
013 ==> 171823 : Add a non-permanent template superimpose option.
014 ==> 103696 : Fit image into superimpose template.
015 ==> 117343 : JJ: Border images - Christmas and other seasons templates wanted.
016 ==> 103695 : Precise movement in superimpose template.
017 ==> 289264 : Add option: "show thumbbar in full-screen picture preview".
018 ==> 237452 : Tagging interface functionality lost.
019 ==> 