@@ -7,7 +7,7 @@
  * Description : collections setup tab model/view
  *
  * Copyright (C) 2008-2011 by Marcel Wiesweg <marcel dot wiesweg at gmx dot de>
- * Copyright (C) 2005-2011 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2005-2012 by Gilles Caulier <caulier dot gilles at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -55,7 +55,7 @@
 #include "albumsettings.h"
 #include "collectionlocation.h"
 #include "collectionmanager.h"
-#include "scancontroller.h"
+#include "newitemsfinder.h"
 
 namespace Digikam
 {
@@ -493,7 +493,7 @@ void SetupCollectionModel::apply()
     // Trigger collection scan
     if (!newItems.isEmpty() || !deletedItems.isEmpty())
     {
-        ScanController::instance()->completeCollectionScan();
+        new NewItemsFinder();
     }
 }
 
